(Junit): add tests